RSWW-126 introduce ReservationPreference class